--- a/.github/workflows/cd_dev.yml
+++ b/.github/workflows/cd_dev.yml
@@ -1,18 +1,17 @@
 name: Deploy to dev
 on:
   push:
-    branches:
-      - "main"
+    branches: [ main ]
 
 jobs:
   redeploy:
+    runs-on: ubuntu-latest
     name: Deploying to dev
     
     steps:
-      - name: SSH into server
       - run:  |
-          echo ${{secrets.SSH_PRIVATE_KEY_DEV }} &> ~/ssh_key
-          ssh -i ~/ssh_key root@13.239.225.118
+          echo "${{secrets.SSH_PRIVATE_KEY_DEV }}" &> ~/ssh_key
+          echo "yes" | ssh -i ~/ssh_key root@13.239.225.118
           cd Monorepo-Deployment && git pull
           pnpm install
           pnpm run build
