--- a/.github/workflows/cd_dev.yml
+++ b/.github/workflows/cd_dev.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - run:  |
           echo "${{ secrets.SSH_PRIVATE_KEY_DEV }}" &> ~/ssh_key
+          mkdir .ssh
           echo "${{ secrets.KNOWN_HOSTS }}" &> ~/.ssh/known_hosts
           ssh -i ~/ssh_key root@13.239.225.118
           cd Monorepo-Deployment && git pull
