--- a/.github/workflows/cd_dev.yml
+++ b/.github/workflows/cd_dev.yml
@@ -11,12 +11,11 @@ jobs:
     steps:
       - run:  |
           echo "${{ secrets.SSH_PRIVATE_KEY_DEV }}" &> ~/ssh_key
-          mkdir .ssh
-          echo "${{ secrets.KNOWN_HOSTS }}" &> ~/.ssh/known_hosts
-          ssh -i ~/ssh_key root@13.239.225.118
-          cd Monorepo-Deployment && git pull
-          pnpm install
-          pnpm run build
-          pm2 restart http-server
-          pm2 restart web-server
-          pm2 restart ws-server
+          mkdir -p /home/runner/.ssh
+          ls /home/runner/.ssh
+          touch /home/runner/.ssh/known_hosts
+          echo "${{ secrets.KNOWN_HOSTS }}" &> /home/runner/.ssh/known_hosts
+          chmod 700 /home/runner/ssh_key
+          ssh -i ~/ssh_key root@13.239.225.118 -t "cd cd Monorepo-Deployment && git pull origin main
+          && pnpm install && pnpm run build &&
+          pm2 restart http-server && pm2 restart web-server && pm2 restart ws-server"
