--- a/.github/workflows/cd_dev.yml
+++ b/.github/workflows/cd_dev.yml
@@ -16,6 +16,6 @@ jobs:
           touch /home/runner/.ssh/known_hosts
           echo "${{ secrets.KNOWN_HOSTS }}" &> /home/runner/.ssh/known_hosts
           chmod 700 /home/runner/ssh_key
-          ssh -i ~/ssh_key root@13.239.225.118 -t "cd cd Monorepo-Deployment && git pull origin main
-          && pnpm install && pnpm run build &&
+          ssh -i ~/ssh_key root@13.239.225.118 -t "cd Monorepo-Deployment && git pull origin main
+          && export PATH = /home/ubuntu/.nvm/versions/node/v22.14.0/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin && npm install -g pnpm && pnpm install && pnpm run build &&
           pm2 restart http-server && pm2 restart web-server && pm2 restart ws-server"
